fix(src/app/recursos): overflow text fix

--- a/src/app/pages/recursos/recursos.component.scss
+++ b/src/app/pages/recursos/recursos.component.scss
@@ -28,14 +28,19 @@
 
 .contenidoText {
   display: -webkit-box;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient:vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 8; /* Número de líneas que deseas mostrar */
   width: 100%;
   height: 400px;
+
 }
 
+.container{
+  overflow: hidden;
+  padding-right: 1rem;
+}
 
 h1{
   padding: 0px 8px 16px 8px;
